--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"eject": "react-scripts eject"
 	},
 	"dependencies": {
+		"@imransilvake/scss-framework": "^1.0.8",
 		"node-sass": "^4.10.0",
 		"react": "^16.6.1",
 		"react-dom": "^16.6.1",
