--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
 	"private": true,
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"build": "react-scripts build"
 	},
 	"dependencies": {
 		"@imransilvake/scss-framework": "^2.0.6",
