--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,6 @@
-# dependencies
-/node_modules
-package-lock.json
-yarn.lock
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
+# unnecessary files & folders
 .idea
+yarn.lock
+package-lock.json
+build
+node_modules
